--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ai-image-enhancer",
   "version": "1.0.0",
+  "type": "module",
   "main": "eslint.config.js",
   "scripts": {
     "dev": "vite",
@@ -12,14 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.10",
     "vite": "^7.0.0"
   }
 }
